--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,8 +45,7 @@ body {
 
 .dark_head {
   background-color: #242323;
-  color: white;
-  border-bottom: 1px solid #5a5a5a; }
+  color: white; }
   .dark_head h1 {
     padding: 10px; }
 
