--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,10 @@
 		= stylesheet_link_tag 'style'
 	%body
 		.container_12
+			.grid_12.thirty5.signin
+				%p 
+					= render :partial => 'users/user_bar'
+			.clear
 			.grid_12.dark_head.sixty.big
 				%h1 LogoHere
 			.clear
