--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -18,6 +18,9 @@ body
 .thirty
 	height: 30px
 
+.thirty5
+	height: 35px
+
 .one20
 	height: 120px
 	
@@ -42,7 +45,11 @@ body
 		padding: 5px
 		text-align: left
 		left: 120px
-		
+.signin
+	text-align: right
+	color: white
+	a
+		color: white
 .footer
 	color: white
 	border-top = 1px solid !lighter
