--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,7 @@
 		= stylesheet_link_tag 'style'
 	%body
 		.container_12
-			.grid_12.thirty5.signin
+			.grid_12.fourty.signin
 				%p 
 					= render :partial => 'users/user_bar'
 			.clear
