basic entry setup

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,8 @@
 					= render :partial => 'users/user_bar'
 			.clear
 			.grid_12.dark_head.sixty.big
-				%h1 LogoHere
+				%h1 
+					= link_to 'LogoHere', root_path
 			.clear
 			.grid_12.navigation.thirty
 			.clear
