--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -5,4 +5,6 @@
 		= link_to "Destroy it", request_path, :method => 'delete'
 		|
 		= link_to "Comments", request_comments_path(@req)
+		|
+		= link_to "Entries", request_entries_path(@req)
 .clear
