--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -76,10 +76,16 @@ body
 	
 .content
 	background-color = !foreground
+	h1
+		font-size = !font_header
+		padding: 10 50 10 50px
 	p
 		font-size = !font_normal + 5
 		font-family: arial
-		padding: 20 50 20 70px
+		padding: 20 50 20 50px
+	ul
+		font-size = !font_normal
+		padding: 0 50 0 50px
 
 .lighter
 	background-color = !lighter
