--- a/app/views/comments/show.html.haml
+++ b/app/views/comments/show.html.haml
@@ -1,8 +1,10 @@
 .grid_12.content
-	%p
+	%h1
 		= @comment.title
 	%p
 		= @comment.body
-	%p
-		= link_to "Destroy it", comment_path, :method => 'delete'
+	-if current_user == @comment.user_id
+		%p
+			= link_to "Destroy it", comment_path, :method => 'delete'
+			= link_to "Edit it", edit_comment_path
 .clear
