--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,11 +1,11 @@
-.span-24.last
+.span-24.center.last
 	%h1 big slogan thing here.
 .span-24.last
-.span-12
+.span-12.center
 	%h2 headline is nice.
-.span-12.last
+.span-12.center.last
 	%h2 yes, and another.
-.span-24.last
+.span-22.last.prepend-1.append-1
 	%p 
 		Yes, I suck at design. This is only a template and demonstration of the "grid" system.
 	%p
