--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -1,115 +1,21 @@
-!font_normal = 20px
-!font_header = 40px
-!background = #353535
-!darker = #242323
-!lighter = #5A5A5A
-!header = #214411
-!nav = #39741D 
-!foreground = white
+!backcolor = #424242
 
 body
-	font-family: arial
-	font-size = font_normal
-	background-color = !background
+	background-color = !backcolor
+
+
+.container
+	background-color: white
 	
-.sixty
-	height: 60px
 
-.thirty
-	height: 30px
-
-.fourty
-	height: 40px
-
-.one20
-	height: 120px
-	
-.two00
-	height: 200px
-	
-.big_ad
-	text-align: center
-	h1
-		font-size = !font_header * 1.3
-		padding: 30px
-
-.small_ad
-	text-align: center
-	h1
-		font-size = !font_header
-		padding: 10px 0px 10px 0px
-	li
-		list-style: decimal
-		position: relative
-		font-size = !font_normal + 10
-		padding: 5px
-		text-align: left
-		left: 120px
 .signin
+	background-color = !backcolor
+	color: white
+	a
+		color: white
+
+
+.align_right
 	text-align: right
-	color: white
-	a
-		color: white
-.footer
-	color: white
-	border-top = 1px solid !lighter
-	p
-		padding: 20px
-		font-family: arial
-		text-align: center
-		font-size = !font_normal - 5
-
-.dark_head
-	background-color = !darker
-	color: white
-	h1
-		padding: 10px
-	a
-		color: white
-		text-decoration: none
-	
-.head
-	background-color = !header
-	
-.navigation
-	background-color = !nav
-	
-.content
-	background-color = !foreground
-	h1
-		font-size = !font_header
-		padding: 10 50 10 50px
-	p
-		font-size = !font_normal + 5
-		font-family: arial
-		padding: 20 50 20 50px
-	ul
-		font-size = !font_normal
-		padding: 0 50 0 50px
-
-.lighter
-	background-color = !lighter
-	
-.big
-	font-size = !font_header
-
-.colorf1l
-	color: #1E2C73
-
-.colorf2l
-	color: #6B1E72
-
-.colorf1d
-	color: #131C49
-
-.colorf2d
-	color: #39103D
-	
-.blackf
-	color: black
-	
-.borderb
-	border-bottom: 1px solid black
-
-.bordert
-	border-top: 1px solid black
+.center
+	text-align: center
