--- a/app/views/requests/index.html.haml
+++ b/app/views/requests/index.html.haml
@@ -7,12 +7,27 @@
 				= category_list_item(category, @selected_category)
 			= submit_tag 'Filter'
 			
-	%ul
+	%table
+		%tr.underline 
+			%th Name
+			%th Category
+			%th Karma
+			%th User
+			%th Date Submitted
+		- count = 0
 		- @reqs.each do |r|
-			%li
-				= link_to r.title, request_path(r) 
-				|
-				= Category.find(r.category_id).name
-				|
-				= r.submitted_long_ago
+			- count = count + 1
+			- color = "#7D90A5"
+			- color = "white" unless count % 2 == 0
+			%tr{:style => "background-color:#{color}"}
+				%td
+					= link_to r.title, request_path(r) 
+				%td
+					= Category.find(r.category_id).name
+				%td
+					= r.karma
+				%td
+					= r.user.login unless r.user == nil
+				%td
+					= r.submitted_long_ago
 			
