--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -12,7 +12,7 @@
 		|
 		= link_to "Entries", request_entries_path(@req)
 		
-	- if current_user.id == @req.user_id
+	- if current_user.id == @req.user_id or current_user.admin
 		%p
 			= link_to "Destroy it", request_path, :method => 'delete'
 			|
