subtract user karma, enforce valid currency

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,5 +1,7 @@
-.span-24.center.last
-	%h1 some random idealistic message.
+.span-24.center.massive.last
+	%hr
+		%h1 where life plays fair, and free
+	%hr
 .span-24.last
 .span-12.center
 	%h2 
@@ -10,10 +12,11 @@
 		view
 		= link_to 'awesome work.', requests_path
 .span-16.last.prepend-4.append-4
+	%hr
 	%h4
-		There could be an eloquent and generally awesome message pertaining to what we
-		do, what our goals our, and why people should use this site. I think we 
-		probably also want to some images of 'completed work' on this page.
+		First, don't take anything I'm putting here overly seriously. 
+		That said, I do like the idea of 'bijected' (the mathematical 
+		term) karma; in real life there is not often a one-to-one mapping of good => bad.
 .span-8.last.prepend-7.append-7
 	%h4
 		Things left to do:
