--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -6,6 +6,12 @@ body
 
 .container
 	background-color: white
+.red
+	background-color: red
+	color: white
+.green
+	background-color: green
+	color: white
 	
 
 .signin
@@ -13,7 +19,6 @@ body
 	color: white
 	a
 		color: white
-
 
 .align_right
 	text-align: right
