--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -1,18 +1,21 @@
 .span-22.prepend-1.append-1.last
-	%h1
+	%h2
 		= @req.title
+	%h3
+		Posted by
+		= link_to "[#{@req.user.login}]", user_path(@req.user)
+.span-22.prepend-1.append-1.last
 	%p
 		= @req.description
-	
 	%p
-		Awards:
+		Karma Award:
 		= @req.karma
 	%p
 		= link_to "Comments", request_comments_path(@req)
 		|
 		= link_to "Entries", request_entries_path(@req)
 		
-	- if current_user.id == @req.user_id or current_user.admin
+	- if current_user.admin
 		%p
 			= link_to "Destroy it", request_path, :method => 'delete'
 			|
