--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -1,15 +1,21 @@
 .span-22.prepend-1.append-1.last
-	%h2
+	%h1
 		= @req.title
-	%h3
+.span-5.prepend-1
+	%h2
+		Award:
+		= @req.karma
+.span-6
+	%h2
 		Posted by
 		= link_to "[#{@req.user.login}]", user_path(@req.user)
+.span-12.last
+	%h2
+		Ends:
+		= @req.end.strftime("%B %d %H:%M %p")
 .span-22.prepend-1.append-1.last
 	%p
 		= @req.description
-	%p
-		Karma Award:
-		= @req.karma
 	%p
 		= link_to "Comments", request_comments_path(@req)
 		|
