--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
 	%h2
 		= @user.login
 	%p
-		= image_tag @user.avatar.url(:medium)
+		= image_tag @user.avatar.url(:thumb)
 	%p
 		= link_to 'Edit Account Settings', edit_user_path(@user)
 	%p
