update user view

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -16,7 +16,7 @@
 	%h4
 		First, don't take anything I'm putting here overly seriously. 
 		That said, I do like the idea of 'bijected' (the mathematical 
-		term) karma; in real life there is not often a one-to-one mapping of good => bad.
+		term) karma; in life there is not often a one-to-one mapping of good <=> bad.
 .span-8.last.prepend-7.append-7
 	%h4
 		Things left to do:
