--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -14,11 +14,17 @@ body
 	color: white
 	
 
-.signin
+.onback
 	background-color = !backcolor
 	color: white
+	h1
+		a
+			text-decoration: none
+			color: white
 	a
 		color: white
+		hover
+			color: black
 
 .align_right
 	text-align: right
