--- a/app/views/requests/index.html.haml
+++ b/app/views/requests/index.html.haml
@@ -4,18 +4,19 @@
 .span-5.append-1.last
 	%h2
 		=link_to 'Refresh Filter', requests_path
-.span-11.prepend-1
-	- form_tag filter_by_category_requests_path, :method => 'get' do			
+		
+- form_tag filter_by_category_requests_path, :method => 'get' do
+	.span-4.prepend-1
 		%ul
 			-@categories.each do |category|
 				= category_list_item(category, @selected_categories)
-			= submit_tag 'Filter'
-.span-11.append-1.last			
-	%h4
-		Filter By
-		= link_to 'Karma Awarded,', requests_path, :sort => 'karma'
-		= link_to 'Just Posted,', requests_path, :sort => 'start'
-		= link_to 'About to End', requests_path, :sort => 'end'
+	.span-4.center.append-15.last			
+		%h4
+			Sort By:
+			%br
+			= select_tag "sort", sort_order_as_options(@order)
+			%br
+			= submit_tag 'Sort and Filter'
 .span-22.prepend-1.append-1.last
 	%table
 		%tr.underline 
@@ -42,4 +43,3 @@
 					= r.submitted_long_ago
 	%p
 		= link_to "New Request", new_request_path
-			
