--- a/app/views/requests/index.html.haml
+++ b/app/views/requests/index.html.haml
@@ -18,6 +18,7 @@
 			%br
 			= submit_tag 'Sort and Filter'
 .span-22.prepend-1.append-1.last
+	%hr
 	%table
 		%tr.underline 
 			%th Name
@@ -28,7 +29,7 @@
 		- count = 0
 		- @reqs.each do |r|
 			- count = count + 1
-			- color = "#7D90A5"
+			- color = "#C1C2E4"
 			- color = "white" unless count % 2 == 0
 			%tr{:style => "background-color:#{color}"}
 				%td
