--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -32,7 +32,7 @@
 		%hr
 		%h4 
 			This Request is Closed. See the
-			= link_to "Winner", requests_path
+			= link_to "Winner", entry_path(@req.winner.entry_id)
 			
 		%hr
 		
