--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -7,7 +7,7 @@ body
 .container
 	background-color: white
 .red
-	background-color: red
+	background-color: #FFBFB3
 	color: white
 .green
 	background-color: green
