--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -21,11 +21,10 @@
 		Things left to do:
 		%ul
 			%li Cleanup/create decent design
-			%li Make user profile useful (portfolio, ect.)
 			%li Random security stuff (limit uploads, deletions, ect.)
 			%li Pagination of some pages
-			%li Setup comment-reply system
-			%li Create way to browse winners
+			%li Fix up comment-reply system
+			%li Add karma to all users when request closes
 .span-16.last.prepend-4.append-4
 	%h4
 		The functionality is looking decent for the most part. We should probably talk in person
