--- a/app/views/requests/index.html.haml
+++ b/app/views/requests/index.html.haml
@@ -7,45 +7,16 @@
 		
 .span-22.append-1.prepend-1.last
 	- form_tag requests_path, :method => 'get' do
-		.span-11
-			%ul
-				-@categories.each do |category|
-					= category_list_item(category, @selected_categories)
-		.span-11.last
-			%h4
-				Sort By:
-				%br
-				= select_tag "sort", sort_order_as_options(@order)
-				%br
-				= submit_tag 'Sort and Filter'
-		%hr
+		%ul
+			-@categories.each do |category|
+				= category_list_item(category, @selected_categories)
+		= submit_tag 'Filter'
+	%hr
 .span-11.prepend-1
 	%p
 		= link_to "New Request", new_request_path
 .span-11.append-1.align_right.last
 	%p
 		= will_paginate @reqs
-.span-22.prepend-1.append-1.last
-	%table
-		%tr.underline 
-			%th Name
-			%th Category
-			%th Karma
-			%th User
-			%th Date Submitted
-		- count = 0
-		- @reqs.each do |r|
-			- count = count + 1
-			- color = "#C1C2E4"
-			- color = "white" unless count % 2 == 0
-			%tr{:style => "background-color:#{color}"}
-				%td
-					= link_to r.title, request_path(r) 
-				%td
-					= Category.find(r.category_id).name
-				%td
-					= r.karma
-				%td
-					= link_to r.user.login, user_path(r.user) unless r.user == nil
-				%td
-					= r.submitted_long_ago
+#ajaxy_table
+	= render :partial => 'table'
