--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -12,6 +12,9 @@ body
 .green
 	background-color: green
 	color: white
+.blue
+	background-color: #CED6D6
+	color: black
 	
 .flash
 	margin-top: 10px
