--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,10 @@ body {
   background-color: green;
   color: white; }
 
+.blue {
+  background-color: #CED6D6;
+  color: black; }
+
 .flash {
   margin-top: 10px; }
 
