--- a/app/views/requests/index.html.haml
+++ b/app/views/requests/index.html.haml
@@ -37,7 +37,7 @@
 			don't see a category that ought to be here? we can help you out.
 		%h4
 			= link_to 'click here', root_path
-			to send in a request.
+			to send in a suggestion.
 		%h4
 			other concerns? we welcome 
 			=link_to 'feedback', root_path
