sign in and index

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -22,8 +22,7 @@
 		%ul
 			%li Cleanup/create decent design
 			%li Random security stuff (limit uploads, deletions, ect.)
-			%li Fix up comment-reply system
-			%li Add karma to all users when request closes
+			%li Add messaging system
 .span-16.last.prepend-4.append-4
 	%h4
 		The functionality is looking decent for the most part. We should probably talk in person
