--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -23,8 +23,9 @@
 					= flash[:error]
 			.span-24.last
 			= yield
-			.span-24.center.last
-				%p 
+			.span-22.prepend-1.append-1.last
+				%hr
+				%p.center	
 					= link_to 'Contact' 
 					| 
 					=link_to 'About', about_path 
