--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,28 +1,24 @@
 - @user.password = @user.password_confirmation = nil
+.span-12.last.prepend-6.append-6.last.center
+	- form_for @user, :html => {:multipart => true} do |f|
+		%p
+			= f.error_messages
+		%p
+			= f.label :login
+			%br
+			= f.text_field :login
+		%p
+			= f.label :email
+			%br
+			= f.text_field :email
+		%p
+			= f.label :password
+			%br
+			= f.password_field :password
 
-- form_for @user, :html => {:multipart => true} do |f|
-	%p
-		= f.error_messages
-	%p
-		= f.label :login
-		%br
-		= f.text_field :login
-	%p
-		= f.label :email
-		%br
-		= f.text_field :email
-	%p
-		= f.label :password
-		%br
-		= f.password_field :password
-
-	%p	
-		= f.label :password_confirmation, 'Confirm Password'
-		%br
-		= f.password_field :password_confirmation
-	%p
-		= f.label :avatar
-		%br
-		= f.file_field :avatar
-	%p
-		= f.submit 'Sign up'
+		%p	
+			= f.label :password_confirmation, 'Confirm Password'
+			%br
+			= f.password_field :password_confirmation
+		%p
+			= f.submit 'Sign up'
