sign in and index

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,4 +1,4 @@
-.span-24.center.massive.last
+.span-22.append-1.prepend-1.center.massive.last
 	%h1 where life plays fair, and free
 	%hr
 .span-24.last
