--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,7 @@
 		= stylesheet_link_tag 'screen'
 		= stylesheet_link_tag 'style'
 		= javascript_include_tag 'prototype'
+		%title BijectKarma
 	%body
 		.container
 			.span-24.onback
