temp home for screencast

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,5 +1,5 @@
-.span-22.append-1.prepend-1.center.massive.last
-	%h1 where life plays fair, and free
+.span-22.append-1.prepend-1.center.last
+	%h1 we do service exchange
 	%hr
 .span-24.last
 .span-12.center
@@ -12,19 +12,21 @@
 		= link_to 'awesome work.', requests_path
 .span-16.last.prepend-4.append-4
 	%hr
+	%h3
+		consider the case of a dirt-poor student putting together his first web app
 	%h4
-		First, don't take anything I'm putting here overly seriously. 
-		That said, I do like the idea of 'bijected' (the mathematical 
-		term) karma; in life there is not often a one-to-one mapping of good <=> bad.
-.span-8.last.prepend-7.append-7
-	%h4
-		Things left to do:
-		%ul
-			%li Cleanup/create decent design
-			%li Random security stuff (limit uploads, deletions, ect.)
-			%li Add messaging system
-.span-16.last.prepend-4.append-4
-	%h4
-		The functionality is looking decent for the most part. We should probably talk in person
-		at some point later in the week.
+		he doesn't want to pay for a designer, but depending on his 
+		skill-set, he may have too. if he could somehow exchange what he's good at 
+		(coding, writing) for what he's not so  good at (design), then he would be 
+		better off.
+	%h3
+		we provide a place where this can happen. 
+	%h4 
+		no money? no problem. we believe
+		that a for a certain class of exchanges, dealing with money imposes an overly
+		steep transaction cost, and we mean to be the solution.
+	%hr
+	%h3.center
+		so go ahead, browse the 
+		= link_to 'exchange.', requests_path 
 
