--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -12,20 +12,7 @@
 		= link_to 'awesome work.', requests_path
 .span-16.last.prepend-4.append-4
 	%hr
-	%h3
-		consider the case of a dirt-poor student putting together his first web app
-	%h4
-		he doesn't want to pay for a designer, but depending on his 
-		skill-set, he may have too. if he could somehow exchange what he's good at 
-		(coding, writing) for what he's not so  good at (design), then he would be 
-		better off.
-	%h3
-		we provide a place where this can happen. 
-	%h4 
-		no money? no problem. we believe
-		that a for a certain class of exchanges, dealing with money imposes an overly
-		steep transaction cost, and we mean to be the solution.
-	%hr
+	<object width="600" height="383"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9627525&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9627525&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="600" height="383"></embed></object><p><a href="http://vimeo.com/9627525">BijectKarma</a> from <a href="http://vimeo.com/user3226476">Ethan Fast</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
 	%h3.center
 		so go ahead, browse the 
 		= link_to 'exchange.', requests_path 
